--- a/css/blocks/_reviews.scss
+++ b/css/blocks/_reviews.scss
@@ -1,14 +1,31 @@
 @use "../helpers/index" as *;
 
 .reviews {
-  @include responsive-grid(2, 3, 3, 1rem);
+  @include responsive-grid(1, 1, 3, 1rem);
+  color: #605e56;
+  margin-bottom: rem(40);
+
+  &__link {
+    @include flex-center;
+    margin-top: 1rem;
+    color: $color-accent;
+    font-size: rem(18);
+  }
 
   &-item {
-    padding: rem(30) rem(30) rem(20);
+    padding-top: rem(30);
+    padding-inline: rem(20);
     border: 1px solid #dcd6d1;
     border-radius: $border-radius;
     background-color: $color-white;
   }
+}
+
+.reviews__wrapper:nth-child(2n+1) .review-head__avatar {
+  background-color: #ffebf0;
+}
+.reviews__wrapper:nth-child(2n+2) .review-head__avatar {
+  background-color: #fff7c4;
 }
 
 .review-head {
@@ -25,7 +42,6 @@
     @include square(rem(44));
     border-radius: 50%;
     overflow: hidden;
-    background-color: #ffebf0;
     text-transform: uppercase;
     font-weight: 700;
 
@@ -69,10 +85,94 @@
         margin-top: -1px;
         transform: translateY(-50%);
         @include square(rem(14));
-        background-image: url("/images/icons/geo.svg");
+        background-image: url("~icons/geo.svg");
         background-size: cover;
         transform: translateY(-50%);
       }
+    }
+  }
+}
+
+
+.review-rate {
+  display: flex;
+  padding-block: 1rem;
+
+  @include mobile-above {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @include mobile {
+    flex-direction: column;
+    row-gap: rem(5);
+  }
+
+
+  &__stars {
+    display: flex;
+    column-gap: rem(2);
+
+    &-item {
+      @include square(rem(20));
+      background-image: url("~icons/star.jpg");
+      background-size: cover;
+
+      &.no-star {
+        background-image: url("~icons/star-no.jpg");
+      }
+    }
+
+  }
+  &__date {
+    font-size: rem(14);
+  }
+}
+
+.review-body {
+  color: #191919;
+
+  p {
+    margin: 0;
+  }
+
+  &__experience {
+    font-size: rem(14);
+    padding-block: 1rem;
+    border-bottom: 1px solid #dcd6d1;
+  }
+}
+
+.review-footer {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  column-gap: 1rem;
+  padding-block: rem(20);
+
+  p {
+    display: flex;
+    justify-content: start;
+    margin: 0;
+  }
+
+  &__icon {
+    display: block;
+    @include square(rem(18));
+    background-position: center;
+    background-repeat: no-repeat;
+
+    &.like {
+      background-image: url("~icons/like.svg");
+      transform: translateY(1px);
+    }
+    &.share {
+      background-image: url("~icons/share.svg");
+      transform: translateY(1px);
+    }
+    &.flag {
+      background-image: url("~icons/flag.svg");
+      margin-left: auto;
     }
   }
 }
