--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -71,6 +71,7 @@ $transition-duration: 0.3s;
 
 // z-index
 $z-index-header: 100;
+$z-index-sidebar: 101;
 
 //
 $background-gradient-red: linear-gradient(180deg, rgba(232, 0, 16, 0.00) 0%, #8F000A 100%);
