--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -2,14 +2,15 @@
 
 html {
   overflow-x: hidden;
+  max-width: 100%;
   &.is-lock {
-    overflow: hidden;
+    overflow-y: hidden;
   }
 }
 
 body {
   font-family: "Syne", sans-serif;
-  font-size: fluid-text(16, 14);
+  @include fluid-text(16, 14);
   background-color: $color-black;
   color: $color-light;
 }
