--- a/css/blocks/_footer.scss
+++ b/css/blocks/_footer.scss
@@ -1,4 +1,4 @@
-@use '../helpers/index' as *;
+@use '../helpers' as *;
 
 .footer {
   grid-area: footer;
@@ -11,6 +11,11 @@
     &-list {
       @include flex-center;
       column-gap: 1rem;
+
+      @include mobile {
+        flex-direction: column;
+        row-gap: rem(5);
+      }
     }
 
     &-link {
@@ -21,7 +26,6 @@
         color: $color-footer-link-hover;
       }
     }
-
   }
 
   &__copyright {
