--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -14,12 +14,18 @@
 //width
 $sidebar-width: rem(64);
 $sidebar-open-width: rem(320);
+$sidebar-open-width-tablet: rem(275);
 
 // icon-sizes in aside
 $header-height: rem(64);
 $sidebar-icon-size: rem(48);
 $sidebar-padding-inline: calc(($sidebar-width - $sidebar-icon-size) /2);
 
+
+// z-index
+$z-index-header: 100;
+$z-index-sidebar: 101;
+$z-index-burger-menu: 102;
 
 // --- Colors ---
 $color-black: #011111;
@@ -69,9 +75,7 @@ $font-family-base: 'OpenSans', sans-serif;
 // ---Transitions ---
 $transition-duration: 0.3s;
 
-// z-index
-$z-index-header: 100;
-$z-index-sidebar: 101;
+
 
 //
 $background-gradient-red: linear-gradient(180deg, rgba(232, 0, 16, 0.00) 0%, #8F000A 100%);
