--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -18,6 +18,7 @@ $sidebar-open-width-tablet: rem(275);
 
 // icon-sizes in aside
 $header-height: rem(64);
+$header-height-mobile: rem(80);
 $sidebar-icon-size: rem(48);
 $sidebar-padding-inline: calc(($sidebar-width - $sidebar-icon-size) /2);
 
