--- a/css/blocks/_contact-form.scss
+++ b/css/blocks/_contact-form.scss
@@ -7,35 +7,47 @@
   border-radius: rem(10);
   border: $border;
 
-  h1{
+  h1 {
     text-align: center;
   }
 
-  &__form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  .contact-form__group {
+    margin-bottom: $gap-md;
   }
 
   &__label {
+    color: $color-light;
     font-weight: 500;
-    display: flex;
-    flex-direction: column;
+    display: block;
+    margin-bottom: rem(5);
   }
+
+  &__input,
+  &__textarea,
+  &__button {
+    display: block;
+    width: 100%;
+    border-radius: rem(8);
+    font-size: 1rem;
+    color: $color-white;
+  }
+
 
   &__input,
   &__textarea {
     padding: 0.75rem 1rem;
     border: $border;
-    border-radius: 8px;
-    font-size: 1rem;
-    color: $color-white;
-    background-color: #022222;;
+    background-color: #022222;
 
     &:focus {
       border-color: $color-primary-accent;
       outline: none;
     }
+
+    &.invalid {
+      border-color: red;
+    }
+
   }
 
   &__textarea {
@@ -43,15 +55,17 @@
     min-height: 120px;
   }
 
+  &__error {
+    color: red;
+  }
+
+
   &__button {
+    padding-block: rem(10);
     background-color: $color-primary;
-    color: $color-white;
     border: none;
-    padding: 0.75rem 1rem;
-    font-size: 1rem;
-    border-radius: 8px;
     cursor: pointer;
-    transition: background-color 0.2s;
+    transition-duration: $transition-duration;
 
     &:hover {
       background-color: $color-primary-accent;
