--- a/css/styles.css
+++ b/css/styles.css
@@ -684,12 +684,15 @@ a[aria-label]::before, button[aria-label]::before {
   grid-area: main;
 }
 
+.main-banner {
+  margin-bottom: 24px;
+}
 .main-banner__wrapper {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: clamp(9.375rem, 1.6349337748rem + 33.1125827815vw, 28.125rem);
+  min-height: clamp(9.6875rem, 2.0764348786rem + 32.5607064018vw, 28.125rem);
   padding-block: clamp(0.625rem, 0.3669977925rem + 1.1037527594vw, 1.25rem);
   border-radius: 0.625rem;
   overflow: hidden;
@@ -711,17 +714,22 @@ a[aria-label]::before, button[aria-label]::before {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  row-gap: 1rem;
-  padding-block: clamp(1.25rem, -0.298013245rem + 6.6225165563vw, 5rem);
-  padding-inline: clamp(1.25rem, -3.3940397351rem + 19.8675496689vw, 12.5rem);
+  row-gap: clamp(0.5rem, 0.293598234rem + 0.8830022075vw, 1rem);
+  padding-block: clamp(0.625rem, -0.1490066225rem + 3.3112582781vw, 2.5rem);
+  padding-inline: clamp(0.9375rem, -0.2235099338rem + 4.9668874172vw, 3.75rem);
   border-radius: 0.625rem;
   background-color: rgba(6, 31, 31, 0.8);
   box-shadow: 1px 2px 20px rgba(6, 31, 31, 0.8);
   transition-duration: 0.3s;
 }
+.main-banner__content-title {
+  font-size: clamp(1.125rem, 0.6605960265rem + 1.9867549669vw, 2.25rem);
+  color: #fff;
+}
 .main-banner__content-btn {
-  padding: 0.6rem 1.5rem;
-  font-size: 1rem;
+  font-size: clamp(0.75rem, 0.646799117rem + 0.4415011038vw, 1rem);
+  padding-block: clamp(0.3125rem, 0.1834988962rem + 0.5518763797vw, 0.625rem);
+  padding-inline: clamp(0.625rem, 0.3669977925rem + 1.1037527594vw, 1.25rem);
 }
 .main-banner__img-overlay {
   width: 100%;
@@ -1172,41 +1180,47 @@ a[aria-label]::before, button[aria-label]::before {
 .contact-form h1 {
   text-align: center;
 }
-.contact-form__form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+.contact-form .contact-form__group {
+  margin-bottom: 1.25rem;
 }
 .contact-form__label {
+  color: #98B6B6;
   font-weight: 500;
-  display: flex;
-  flex-direction: column;
+  display: block;
+  margin-bottom: 0.3125rem;
+}
+.contact-form__input, .contact-form__textarea, .contact-form__button {
+  display: block;
+  width: 100%;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  color: #fff;
 }
 .contact-form__input, .contact-form__textarea {
   padding: 0.75rem 1rem;
   border: 1px solid rgba(88, 92, 131, 0.3019607843);
-  border-radius: 8px;
-  font-size: 1rem;
-  color: #fff;
   background-color: #022222;
 }
 .contact-form__input:focus, .contact-form__textarea:focus {
   border-color: #5A75FF;
   outline: none;
 }
+.contact-form__input.invalid, .contact-form__textarea.invalid {
+  border-color: red;
+}
 .contact-form__textarea {
   resize: vertical;
   min-height: 120px;
 }
+.contact-form__error {
+  color: red;
+}
 .contact-form__button {
+  padding-block: 0.625rem;
   background-color: #3D5CFF;
-  color: #fff;
   border: none;
-  padding: 0.75rem 1rem;
-  font-size: 1rem;
-  border-radius: 8px;
   cursor: pointer;
-  transition: background-color 0.2s;
+  transition-duration: 0.3s;
 }
 .contact-form__button:hover {
   background-color: #5A75FF;
