--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -13,7 +13,7 @@ body {
   color: $color-light;
 }
 
-section, .mini-game {
+section, .mini-game, .auth-form {
   margin-top: $margin-block-section;
   padding-bottom: $margin-block-section;
 }
