--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -27,6 +27,7 @@ $sidebar-padding-inline: calc(($sidebar-width - $sidebar-icon-size) /2);
 $z-index-header: 100;
 $z-index-sidebar: 101;
 $z-index-burger-menu: 102;
+$z-index-modal: 200;
 
 // --- Colors ---
 $color-black: #011111;
