--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,5 +18,6 @@
 @use 'blocks/login-page';
 @use 'blocks/reviews';
 @use 'blocks/contact-form';
+@use "blocks/modal";
 
 @use 'blocks/info-page-content';
