--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -33,8 +33,7 @@ $z-index-modal: 200;
 $color-black: #011111;
 $color-dark-10: #0F3A3A;
 $color-dark-20: #061F1F;
-$color-dark-30: #061F1F;
-
+$color-dark-30: #205757;
 
 
 $color-footer-link: #98B6B6;
