--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,4 +20,8 @@
 @use 'blocks/contact-form';
 @use "blocks/modal";
 
+
+@use 'blocks/content-nav';
+@use 'blocks/table';
+
 @use 'blocks/info-page-content';
