--- a/css/blocks/_main-banner.scss
+++ b/css/blocks/_main-banner.scss
@@ -43,6 +43,12 @@
       @include fluid-text(16, 12);
       padding-block: fluid(10, 5);
       padding-inline: fluid(20, 10);
+
+      &--icon {
+        display: flex;
+        align-items: center;
+        column-gap: rem(10);
+      }
     }
   }
 
@@ -100,4 +106,50 @@
     }
   }
 
+}
+
+
+.promo-code-btn {
+  display: block;
+  margin: rem(10) auto rem(5);
+  padding-block: fluid(15, 8);
+  padding-inline: fluid(20, 10);
+  max-width: rem(165);
+  width: 100%;
+  position: relative;
+  border: 2px dotted #000;
+  text-transform: uppercase;
+  font-weight: 700;
+  background: $color-white;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+  }
+
+  &__text {
+    pointer-events: none;
+    padding: rem(10) rem(20);
+    border-radius: 20px;
+    position: absolute;
+    left: 50%;
+    top: -2.5em;
+    transform: translateX(-50%) translateY(0);
+    opacity: 0;
+    color: $color-white;
+    font-size: rem(12);
+    white-space: nowrap;
+    transition: all 0.4s ease;
+    box-shadow: 0 0 10px rgba(0,0,0,0.8);
+    z-index: 2;
+    border: 2px solid $color-white;
+    background-color: rgba($color-accent, 0.9);
+
+    &.visible {
+      opacity: 1;
+      transform: translateX(-50%) translateY(-10px);
+    }
+  }
 }
